--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,13 @@
 
     <groupId>com.elpsy.pse-trading</groupId>
     <artifactId>pse-trading-axon-server-spring-boot</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>axon-core-api</module>
+        <module>order-service</module>
+        <module>stock-price-service</module>
+    </modules>
 
 
 </project>
