--- a/axon-core-api/pom.xml
+++ b/axon-core-api/pom.xml
@@ -29,6 +29,14 @@
             <version>4.0.3</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
